@@ -26,7 +26,7 @@ $sources= array (
 define('PKG_NAME','TinyMCE');
 define('PKG_NAMESPACE',strtolower(PKG_NAME));
 define('PKG_VERSION','3.2.7.0');
-define('PKG_RELEASE','beta4');
+define('PKG_RELEASE','rc1');
 
 require_once dirname(__FILE__) . '/build.config.php';
 require_once MODX_CORE_PATH . 'model/modx/modx.class.php';
