@@ -1,13 +1,13 @@
 <?php
 /*
- * Filename:       assets/plugins/tinymce/lang/russian.inc.php
+ * Filename:       assets/plugins/tinymce/lang/russian-UTF8.inc.php
  * Function:       Russian language file for TinyMCE
  * Encoding:       ISO-Latin-1
  * Author:         Jeff Whitfield
  * Date:           2007/01/06
  * Version:        2.0.9
  * MODx version:   0.9.5
-*/
+ */
 
 $_lang['tinymce_editor_theme_title'] = "Theme:";
 $_lang['tinymce_editor_theme_message'] = "Here you can select which theme or skin to use with the editor.";
